--- a/main.html
+++ b/main.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-	<form id="form1" onsubmit="getFormvalue()">
+	<form id="form1" onsubmit="getFormvalue(event)">
 		First name: <input type="text" name="fname" id="fname"><br>
 		Last name: <input type="text" name="lname" id="lname"><br>
-		<input type="submit" value="Submit" onclick="getFormValue()">
+		<input type="submit" value="Submit">
 	</form>
 	
     <script type="text/javascript" src="./script.js">
