--- a/main.html
+++ b/main.html
@@ -13,10 +13,10 @@
 
 <body>
 	<form id="form1" onsubmit="getFormvalue(event)">
-		First name: <input type="text" name="fname" id="fname"><br>
-		Last name: <input type="text" name="lname" id="lname"><br>
-		<input type="submit" value="Submit">
-	</form>
+        First name: <input type="text" name="fname" id="fname"><br>
+        Last name: <input type="text" name="lname" id="lname"><br>
+        <button type="submit">Submit</button>
+    </form>
 	
     <script type="text/javascript" src="./script.js">
 </script>
