--- a/main.html
+++ b/main.html
@@ -12,9 +12,14 @@
 </head>
 
 <body>
-	<form id="form1" onsubmit="getFormvalue(event)">
-        First name: <input type="text" name="fname" id="fname"><br>
-        Last name: <input type="text" name="lname" id="lname"><br>
+	<h2>Enter Your Name</h2>
+    <form id="nameForm" onsubmit="getFormvalue(event)">
+        <label for="fname">First Name:</label>
+        <input type="text" name="fname" id="fname" placeholder="Enter first name">
+
+        <label for="lname">Last Name:</label>
+        <input type="text" name="lname" id="lname" placeholder="Enter last name">
+
         <button type="submit">Submit</button>
     </form>
 	
