--- a/main.html
+++ b/main.html
@@ -20,7 +20,8 @@
         <label for="lname">Last Name:</label>
         <input type="text" name="lname" id="lname" placeholder="Enter last name">
 
-        <button type="submit">Submit</button>
+        <input type="submit" value="Submit">
+
     </form>
 	
     <script type="text/javascript" src="./script.js">
